Factor out code to set up editing-related context menu items to a static function.

Introduces ContextMenuClientImpl::ComputeEditFlags() to set
WebContextMenuData::edit_flags up. This CL will make unit-testing easier.

This CL has no behavior changes.

BUG=686339

Review-Url: https://codereview.chromium.org/2813463002
Cr-Commit-Position: refs/heads/master@{#463171}

Former-commit-id: adc8910776c64a876f0422454da618a37d01167b